[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vandc"
version = "0.1.0"
description = "Wandb but without any features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "human-id>=0.2.0",
    "loguru>=0.7.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyperclip>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]
authors = [{ name = "Christopher Gadzinski", email = "me@cgad.ski" }]

[tool.hatch.build.targets.wheel]
packages = ["vandc"]
